generating JRE immage